Ensure line breaks are respected

--- a/rca/project_styleguide/templates/patterns/organisms/facilities/facilities.html
+++ b/rca/project_styleguide/templates/patterns/organisms/facilities/facilities.html
@@ -19,7 +19,7 @@
         </div>
         {% if facilities_snippet.copy %}
         <div class="facilities__body">
-            <p>{{ facilities_snippet.copy }}</p>
+            {{ facilities_snippet.copy|linebreaks }}
         </div>
      {% endif %}
     {% endwith %}
