Remove fields for hardcoded values

--- a/rca/project_styleguide/templates/patterns/molecules/apply-intro/apply-intro.html
+++ b/rca/project_styleguide/templates/patterns/molecules/apply-intro/apply-intro.html
@@ -1,4 +1,4 @@
 <div class="apply-intro">
-    <h3 class="apply-intro__heading heading heading--four">{{ page.apply_image_title }}</h3>
-    <p class="apply-intro__introduction">{{ page.apply_image_sub_title }}</p>
+    <h3 class="apply-intro__heading heading heading--four">Change your life and be here in 2020</h3>
+    <p class="apply-intro__introduction"> The Royal College of Art welcomes applicants from all over the world.</p>
 </div>
