--- a/rca/project_styleguide/templates/patterns/molecules/pathways/pathways.html
+++ b/rca/project_styleguide/templates/patterns/molecules/pathways/pathways.html
@@ -1,6 +1,6 @@
 <div class="pathways">
     <h3 class="pathways__heading heading heading--five">Pathways</h3>
-    <p>{{ summary }}</p>
+    <p>When applying for this programme, you select one of these specialist pathways.</p>
     <div class="pathways__items">
         {% for path in pathways %}
             {% include "patterns/atoms/pathway-item/pathway-item.html" with path=path.value %}
