--- a/rca/project_styleguide/templates/patterns/molecules/steps/steps.html
+++ b/rca/project_styleguide/templates/patterns/molecules/steps/steps.html
@@ -25,8 +25,8 @@
                 </div>
             {% endwith %}
         {% endfor %}
-        <a class="steps__action" href="{{ page.apply_cta_link }}" target="_blank">
-            <span class="steps__action-label">{{ page.apply_cta_text }}</span>
+        <a class="steps__action" href="https://applications.rca.ac.uk/" target="_blank">
+            <span class="steps__action-label">Visit our application portal to get started</span>
             <svg width="24" height="16" class="steps__action-icon"><use xlink:href="#arrow"></use></svg>
         </a>
     </div>
