--- a/rca/project_styleguide/templates/patterns/organisms/image-video-block/image-video-block.html
+++ b/rca/project_styleguide/templates/patterns/organisms/image-video-block/image-video-block.html
@@ -1,7 +1,7 @@
 
 <div class="image-video-block">
     <div class="section__row grid">
-        <h2 class="image-video-block__heading heading {% if curriculum %}heading--two{% else %}heading--one{% endif %}">{% if curriculum %}{{ page.title }} curriculum{% else %}{{ heading }}{% endif %}</h2>
+        <h2 class="image-video-block__heading heading {% if curriculum %}heading--two{% else %}heading--one{% endif %}">{% if curriculum %}Curriculum{% else %}{{ heading }}{% endif %}</h2>
         {% if has_meta %}<h3 class="image-video-block__subheading heading heading--four image-video-block__subheading--mobile">{{ subheading }}</h3>{% endif %}
     </div>
     <div class="section__row grid">
