--- a/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
+++ b/rca/project_styleguide/templates/patterns/molecules/key-details/key-details.html
@@ -64,7 +64,7 @@
     {% if page.programme_specification.url %}
         <div class="key-details__section key-details__section--action">
             <a class="key-details__link link link--secondary link--download" href="{{ page.programme_specification.url }}">
-                <span class="link__label">Download the full {{ page.title }} {{ page.degree_level }} programme specification</span>
+                <span class="link__label">Download the {{ page.title }} {{ page.degree_level }} programme specification</span>
                 <svg width="8" height="12" class="link__icon"><use xlink:href="#download"></use></svg>
             </a>
         </div>
