--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
@@ -36,18 +36,16 @@
     {% endif %}
 
     <div class="section__row">
-        <header class="section__header grid">
-            <h3 class="section__heading section__heading--secondary heading heading--four">
-            {% if page.programme_gallery_title %}
-                {{ page.programme_gallery_title }}
-            {% else %}
-                {{ page.title }} gallery
-            {% endif %}
-            </h3>
-        </header>
-        <div class="section__content">
-            {% include "patterns/organisms/slideshow/slideshow.html" with slideshow=page.programme_gallery  modifier=programme_slideshow_modifier %}
-        </div>
+        {% if page.programme_gallery %}
+            <header class="section__header grid">
+                <h3 class="section__heading section__heading--secondary heading heading--four">
+                    Gallery
+                </h3>
+            </header>
+            <div class="section__content">
+                {% include "patterns/organisms/slideshow/slideshow.html" with slideshow=page.programme_gallery  modifier=programme_slideshow_modifier %}
+            </div>
+        {% endif %}
     </div>
 
     <div class="section__notch">
@@ -67,9 +65,9 @@
         {% endif %}
     {% endwith %}
 
-    {% include "patterns/organisms/facilities/facilities.html" with link=page.facilities_link title='Facilities' link_text="See all college facilities" slideshow=page.facilities_gallery  slideshow=page.facilities_gallery %}
+    {% include "patterns/organisms/facilities/facilities.html" with title='Facilities' slideshow=page.facilities_gallery  %}
 
-    {% include "patterns/organisms/featured-alumni/featured-alumni.html" with title="Our Alumni" introduction="Alumni from the RCA form an international network of creative individuals who have shaped and continue to shape the culture surrounding all of us." alumni_links=page.notable_alumni_links %}
+    {% include "patterns/organisms/featured-alumni/featured-alumni.html" with title="Our Alumni" introduction="Our alumni form an international network of creative individuals who have shaped and continue to shape the world." alumni_links=page.notable_alumni_links %}
 
 </section>
 
