--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_detail.html
@@ -51,7 +51,7 @@
                 <section class="section bg bg--light">
                     <div class="contact-anchor" id="contact"></div>
                     <div class="section__container">
-                        {% include "patterns/organisms/contact/contact.html" with heading='Contact us' text="If you want to register your interest about joining the RCA and recieve updates from the RCA and it’s community." image=page.contact_image link_href="https://www.rca.ac.uk/contact-us/" link_text="Register your interest with us here" %}
+                        {% include "patterns/organisms/contact/contact.html" with heading='Ask a question' text="Get in touch if you’d like to find out more or have any questions." image=page.contact_image link_text="Register your interest with us here" %}
                     </div>
                 </section>
 
