Link the related pages

--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
@@ -18,7 +18,7 @@
                         <div class="related-content__meta">
                             <p class="related-content__title body body--one">
                                 <a
-                                    href="{% pageurl relateditem %}"
+                                    href="{% pageurl related_item %}"
                                     class="link link--tertiary"
                                     data-related-title
                                     data-target-image="{{ forloop.counter }}"
