--- a/rca/project_styleguide/templates/patterns/base_page.html
+++ b/rca/project_styleguide/templates/patterns/base_page.html
@@ -4,7 +4,7 @@
 
 {% block meta_tags %}
     {% if GOOGLE_TAG_MANAGER_ID %}
-        {# To enable GTM code you need to specify GOOGLE_TAG_MANAGER_ID in Django settings #}
+        {# To enable GTM code you need to specify GOOGLE_TAG_MANAGER_ID in Heroku settings #}
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -13,10 +13,15 @@
     {% endif %}
 
     {# favicons #}
-    {% comment %}
-        Generate favicons by http://realfavicongenerator.net using the following path: settings.STATIC_URL + img/favicons.
-        Then favicon.ico should be copied to a directory called "public" in the application root and puppet does some magic to serve it up at the site root.
-    {% endcomment %}
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static "images/apple-touch-icon.png" %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static "images/favicon-32x32.png" %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static "images/favicon-16x16.png" %}">
+    <link rel="manifest" href="{% static "images/site.webmanifest" %}">
+    <link rel="mask-icon" href="{% static "images/safari-pinned-tab.svg" %}" color="#000000">
+    <link rel="shortcut icon" href="{% static "images/favicon.ico" %}">
+    <meta name="msapplication-TileColor" content="#000000">
+    <meta name="msapplication-config" content="{% static "images/browserconfig.xml" %}">
+    <meta name="theme-color" content="#000000">
 
     {% comment %}
         Twitter summary card - see https://dev.twitter.com/cards/types/summary
@@ -27,10 +32,10 @@
     <meta name="twitter:title" content="{{ page.title }}" />
     <meta name="twitter:description" content="{{ page|social_text:request.site }}">
     {% if page.social_image  %}
-        {% image page.social_image width-320 as social_img %}
+        {% image page.social_image fill-1200x12000 as social_img %}
         <meta name="twitter:image" content="{{ request.site.root_url }}{{ social_img.url }}">
     {% else %}
-        {# Add a default image to use for social sharing here in case one is not provided on the page. #}
+        <meta name="twitter:image" content="{% static "images/social.png" %}">
     {% endif %}
 
     {# facebook opengraph tags #}
@@ -41,7 +46,7 @@
     {% if page.social_image %}
         <meta property="og:image" content="http://{{ request.site.hostname }}{{ social_img.url }}" />
     {% else %}
-        {# Add a default image to use for social sharing here in case one is not provided on the page. #}
+        <meta name="og:image" content="{% static "images/social.png" %}">
     {% endif %}
     <meta property="og:description" content="{{ page|social_text:request.site }}" />
     <meta property="og:site_name" content="{{ settings.utils.SocialMediaSettings.site_name }}" />
