--- a/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
+++ b/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
@@ -1,3 +1,4 @@
+{% if alumni_links %}
 <div class="section__row grid featured-alumni">
     <h2 class="featured-alumni__heading heading heading--four">{{ title }}</h2>
     <div class="featured-alumni__introduction">
@@ -15,6 +16,7 @@
         </ul>
     </div>
 </div>
+{% endif %}
 {% if alumni_stories %}
 <div class="section__row grid">
     {% include "patterns/organisms/carousel/carousel_api_content.html" with carousel=alumni_stories  modifier='carousel' datatag='data-carousel' %}
