--- a/rca/project_styleguide/templates/patterns/molecules/steps/steps.html
+++ b/rca/project_styleguide/templates/patterns/molecules/steps/steps.html
@@ -25,7 +25,7 @@
                 </div>
             {% endwith %}
         {% endfor %}
-        <a class="steps__action" href="https://applications.rca.ac.uk/" target="_blank">
+        <a class="steps__action" href="https://applications.rca.ac.uk/" target="_blank" rel="noopener">
             <span class="steps__action-label">Visit our application portal to get started</span>
             <svg width="24" height="16" class="steps__action-icon"><use xlink:href="#arrow"></use></svg>
         </a>
