--- a/rca/project_styleguide/templates/patterns/organisms/contact/contact.html
+++ b/rca/project_styleguide/templates/patterns/organisms/contact/contact.html
@@ -11,10 +11,10 @@
         </div>
         {% if page.contact_email %}
             <a href="mailto:{{ page.contact_email }}" class="contact__link link link--secondary link--link body body--two" target="_blank" rel="noopener">
-            Email us
+            <span class="link__label">Email us</span>
         {% else %}
             <a href="{{ page.contact_url }}" class="contact__link link link--secondary link--link body body--two" target="_blank" rel="noopener">
-            Register your interest with us here
+            <span class="link__label">Register your interest with us here</span>
         {% endif %}
             <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
         </a>
