--- a/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
+++ b/rca/project_styleguide/templates/patterns/organisms/featured-alumni/featured-alumni.html
@@ -17,9 +17,12 @@
         </div>
     </div>
 
-    {% if alumni_stories %}
-        <div class="section__row grid">
-            {% include "patterns/organisms/carousel/carousel_api_content.html" with carousel=alumni_stories  modifier='carousel' datatag='data-carousel' %}
-        </div>
-    {% endif %}
+    {% comment %}
+        {% if alumni_stories %}
+            <div class="section__row grid">
+                {% include "patterns/organisms/carousel/carousel_api_content.html" with carousel=alumni_stories  modifier='carousel' datatag='data-carousel' %}
+            </div>
+        {% endif %}
+    {% endcomment %}
+
 {% endif %}
