--- a/rca/static_src/sass/components/_featured-alumni.scss
+++ b/rca/static_src/sass/components/_featured-alumni.scss
@@ -33,7 +33,8 @@
     &__body {
         @include font-size(xxs);
         grid-column: 1 / span 2;
-        margin-bottom: ($gutter * 3);
+        margin-bottom: ($gutter * 2); // Added for API module removal
+        // margin-bottom: ($gutter * 3); // Removed for API module removal
 
         @include media-query(medium) {
             grid-column: 2 / span 1;
@@ -45,6 +46,7 @@
             grid-column: 4 / span 1;
             grid-row: 1;
             margin-top: ($gutter * 5);
+            margin-bottom: ($grid * 8); // Added for API module removal
         }
     }
 
