--- a/rca/project_styleguide/templates/patterns/molecules/hero/hero--home.html
+++ b/rca/project_styleguide/templates/patterns/molecules/hero/hero--home.html
@@ -8,11 +8,11 @@
 
 
     {% image page.hero_image fill-320x568 as image_small %}
-    {% image page.hero_image fill-768x1024 as imageMedium %}
+    {% image page.hero_image fill-768x1024 as image_medium %}
     {% image page.hero_image fill-1440x900 as image_large %}
 
     <img srcset="{{ image_small.url }} 320w,
-                 {{ imageMedium.url }} 768w,
+                 {{ image_medium.url }} 768w,
                  {{ image_large.url }} 1440w"
                  sizes="(max-width: 598px) 290px,
                         (max-width: 1022px) and (min-width: 599px) 768px,
