--- a/rca/project_styleguide/templates/patterns/molecules/hero/hero.html
+++ b/rca/project_styleguide/templates/patterns/molecules/hero/hero.html
@@ -2,11 +2,11 @@
 
 <div class="hero {% if modifier %}hero--{{ modifier }}{% endif %}">
     {% image page.hero_image fill-320x285 as image_small %}
-    {% image page.hero_image fill-768x530 as imageMedium %}
+    {% image page.hero_image fill-768x530 as image_medium %}
     {% image page.hero_image fill-1440x530 as image_large %}
 
     <img srcset="{{ image_small.url }} 320w,
-                 {{ imageMedium.url }} 768w,
+                 {{ image_medium.url }} 768w,
                  {{ image_large.url }} 1440w"
                  sizes="(max-width: 598px) 290px,
                         (max-width: 1022px) and (min-width: 599px) 768px,
