--- a/rca/static_src/sass/components/_related-content.scss
+++ b/rca/static_src/sass/components/_related-content.scss
@@ -71,7 +71,7 @@
     &__meta {
         @include media-query(medium) {
             padding-top: $gutter;
-            padding-right: ($gutter / 2);
+            padding-right: $gutter;
 
             .bg--dark & {
                 border-top: 1px solid $color--grid-line-light;
