--- a/rca/static_src/sass/components/_contact.scss
+++ b/rca/static_src/sass/components/_contact.scss
@@ -44,6 +44,11 @@
     &__text {
         padding-right: $gutter;
         margin-bottom: 0;
+
+        a {
+            color: $color--black;
+        }
+
     }
 
     &__link {
