Applying more bottom padding to facility slideshow if no alumni

--- a/rca/static_src/sass/components/_slide.scss
+++ b/rca/static_src/sass/components/_slide.scss
@@ -5,6 +5,7 @@
         #{$root}__meta {
             @include media-query(medium) {
                 display: flex;
+                min-height: 70px;
             }
         }
     }
