--- a/rca/static_src/sass/components/_slideshow.scss
+++ b/rca/static_src/sass/components/_slideshow.scss
@@ -1,7 +1,7 @@
 .slideshow {
     $root: &;
     $meta-height: 20px;
-    $meta-height-w-author: 65px;
+    $meta-height-w-author: 70px;
     padding-bottom: ($gutter * 2);
     overflow-x: hidden; // Prevent horizontal scroll on iOS
 
@@ -9,12 +9,19 @@
         #{$root}__controls {
             @include media-query(large) {
                 top: -$meta-height-w-author;
+
             }
         }
 
         #{$root}__scrollbar {
             @include media-query(medium) {
                 margin-top: 0;
+            }
+        }
+
+        #{$root}__controls-group {
+            &::after {
+                height: $meta-height-w-author;
             }
         }
     }
