--- a/rca/static_src/sass/components/_facilities.scss
+++ b/rca/static_src/sass/components/_facilities.scss
@@ -56,6 +56,14 @@
         @include media-query(medium) {
             padding-top: ($gutter * 4.5);
         }
+
+        &--bottom-padding {
+            padding-bottom: ($gutter * 2);
+
+            @include media-query(medium) {
+                padding-bottom: ($gutter * 4.5);
+            }
+        }
     }
 
     &__view-all {
