rich-text class for programme-overview description
Style links and bullets

--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
@@ -14,7 +14,7 @@
                 <p class="introduction">
                     {{ page.programme_description_subtitle }}
                 <p>
-                <div class="programme-overview__description" itemprop="description">
+                <div class="programme-overview__description rich-text" itemprop="description">
                     {{ page.programme_description_copy|safe }}
                 </div>
                 {% if page.pathway_blocks %}
