--- a/rca/static_src/sass/abstracts/_mixins.scss
+++ b/rca/static_src/sass/abstracts/_mixins.scss
@@ -141,8 +141,12 @@
         position: absolute;
         background: currentColor;
         transition: width $transition, left $transition;
-        width: 0;
+        width: 100%;
         bottom: -2px;
+
+        @include media-query(medium) {
+            width: 0;
+        }
     }
 
     &:focus,
