sorting out vars

--- a/rca/static_src/sass/abstracts/_variables.scss
+++ b/rca/static_src/sass/abstracts/_variables.scss
@@ -6,12 +6,12 @@ $color--orange: #ff5d1c;
 $color--light-grey: #797979;
 $color--dark-grey: #676767;
 
-$color--white-12: rgba(255, 255, 255, 0.12);
-$color--white-24: rgba(255, 255, 255, 0.24);
-$color--black-12: rgba(0, 0, 0, 0.12);
-$color--black-80: rgba(0, 0, 0, 0.8);
-$color--black-65: rgba(0, 0, 0, 0.65);
-$color--black-24: rgba(0, 0, 0, 0.24);
+$color--white-12: rgba($color--white, 0.12);
+$color--white-24: rgba($color--white, 0.24);
+$color--black-12: rgba($color--black, 0.12);
+$color--black-24: rgba($color--black, 0.24);
+$color--black-65: rgba($color--black, 0.65);
+$color--black-80: rgba($color--black, 0.8);
 
 $color--primary: $color--black;
 $color--secondary: $color--white;
