--- a/rca/static_src/sass/components/_image-video-block.scss
+++ b/rca/static_src/sass/components/_image-video-block.scss
@@ -84,6 +84,10 @@
         }
     }
 
+    .programme-overview & {
+        padding-bottom: 0;
+    }
+
     .bg--dark & {
         #{$root}__copy--meta-copy {
             color: $color--meta-darkbg;
