--- a/rca/static_src/sass/components/_staff-detail.scss
+++ b/rca/static_src/sass/components/_staff-detail.scss
@@ -69,6 +69,7 @@
         #{$root}__image {
             @include media-query(large) {
                 margin-bottom: ($gutter * 1.5);
+                max-width: 75%;
             }
         }
 
