--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -60,7 +60,7 @@
             {% block footer %}{% endblock %}
         </footer>
 
-        <div class="app__messgaes">
+        <div class="app__messages">
             {% include "patterns/molecules/cookie-message/cookie-message.html" %}
         </div>
 
