Removing dark logo from footer

--- a/rca/static_src/sass/components/_logo.scss
+++ b/rca/static_src/sass/components/_logo.scss
@@ -21,8 +21,14 @@
             @include media-query(medium) {
                 width: 230px;
             }
+
+            &--dark {
+                display: none;
+            }
+
         }
     }
+
 
     .theme-dark .header & {
         #{$root}__image {
