hiding dark logo on 404

--- a/rca/static_src/sass/components/_logo.scss
+++ b/rca/static_src/sass/components/_logo.scss
@@ -77,4 +77,18 @@
         @include z-index(headerLogo);
         position: relative;
     }
+
+    .app--404 & {
+        #{$root}__image {
+
+            &--light {
+                display: block;
+            }
+
+            &--dark {
+                display: none;
+            }
+        }
+    }
+
 }
