--- a/rca/project_styleguide/templates/patterns/organisms/image-video-block/image-video-block.html
+++ b/rca/project_styleguide/templates/patterns/organisms/image-video-block/image-video-block.html
@@ -1,6 +1,6 @@
 
 <div class="image-video-block">
-    {% if heading or has_meta %}
+    {% if heading or has_meta or curriculum %}
         <div class="section__row grid">
             <h2 class="image-video-block__heading heading {% if curriculum %}heading--two{% else %}heading--one{% endif %}">{% if curriculum %}Curriculum{% else %}{{ heading }}{% endif %}</h2>
             {% if has_meta %}<h3 class="image-video-block__subheading heading heading--four image-video-block__subheading--mobile">{{ subheading }}</h3>{% endif %}
