Updating intro to h1

--- a/rca/project_styleguide/templates/patterns/pages/home/home_page.html
+++ b/rca/project_styleguide/templates/patterns/pages/home/home_page.html
@@ -19,7 +19,7 @@
                 <section class="section section--top-space-large bg bg--dark">
 
                     <div class="proposition-statement grid">
-                        <div class="proposition-statement__introduction">{{ page.strapline }}</div>
+                        <h1 class="proposition-statement__introduction">{{ page.strapline }}</h1>
                         {% if page.strapline_cta_url and page.strapline_cta_text %}
                             <a href="{{ page.strapline_cta_url }}" class="proposition-statement__link link link--primary link--link link--book">
                                 <span class="link__label">{{ page.strapline_cta_text }}</span>
