Right padding on accoridon items with preview text

--- a/rca/static_src/sass/components/_accordion.scss
+++ b/rca/static_src/sass/components/_accordion.scss
@@ -12,6 +12,7 @@
     &--with-preview {
         #{$root}__heading {
             grid-column: 1 / span 1;
+            padding-right: $gutter;
         }
 
         #{$root}__meta {
