--- a/rca/static_src/sass/abstracts/_mixins.scss
+++ b/rca/static_src/sass/abstracts/_mixins.scss
@@ -143,9 +143,19 @@
         transition: width $transition, left $transition;
         width: 100%;
         bottom: -2px;
+    }
 
+    &::after {
         @include media-query(medium) {
+            content: '';
+            display: block;
+            height: 2px;
+            left: 0;
+            position: absolute;
+            background: currentColor;
+            transition: width $transition, left $transition;
             width: 0;
+            bottom: -2px;
         }
     }
 }
