--- a/rca/project_styleguide/templates/patterns/organisms/contact/contact.html
+++ b/rca/project_styleguide/templates/patterns/organisms/contact/contact.html
@@ -10,7 +10,7 @@
             <p class="contact__text body body--one">{{ text }}</p>
         </div>
         {% if page.contact_email %}
-            <a href="mailto:{{ page.contact_email }}" class="contact__link link link--secondary link--link body body--two" target="_blank" rel="noopener">
+            <a href="mailto:{{ page.contact_email }}" class="contact__link link link--primary link--link body body--two" target="_blank" rel="noopener">
             <span class="link__label">Email us at<br>{{ page.contact_email }}</span>
             <svg width="12" height="8" class="link__icon"><use xlink:href="#arrow"></use></svg>
         </a>
